client/src/components/moviePosterCard.css
.whole-page {
  display: flex;
  max-width: 1920px;
  min-width: 320px;
  margin: 0 auto;
  flex-direction: column;
}
button {
  width: 30%;
  height: 100%;
  border-radius: 5px;
  border: 1px solid #ccc;
  padding: 10px;
  font-size: 16px;
  outline: none;
  background-color: #fff;
  cursor: pointer;
  margin-top: 10px;
}

.search-bar {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  display: flex;
  align-items: center;
  justify-content: flex;
  flex-direction: column;
  padding: 20px;
}
.search-bar input {
  width: 40%;
  height: 100%;
  border-radius: 5px;
  border: 1px solid #ccc;
  padding: 10px;
  font-size: 16px;
  outline: none;
}
.search-bar button:hover {
  background-color: slateblue;
  color: #fff;
}

.movie-results {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  padding: 20px;
}
.movie-list {
  display: inline-block;
  justify-content: center;
  padding: 20px;
  max-width: 400px;
  margin: auto;
}
.movie-list img {
  min-height: 300px;
  max-width: 300px;
  max-height: 400px;
  margin: 10px;
  object-fit: cover;
  border-radius: 5px;
}
.movie-list-info {
  margin-left: 10px;
}
.movie-list-title {
  font-size: 20px;
  font-weight: 600;
  margin-top: 10%;
  margin-bottom: 10px;
  color: black;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 300px;
}

.page-buttons {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 20px;
  margin-left: 5px;
}

.page-buttons button {
  height: 100%;
  border-radius: 5px;
  border: 1px solid #ccc;
  font-size: 16px;
  outline: none;
  background-color: #fff;
  cursor: pointer;
  margin-left: 10px;
  width: 15%;
}
.page-buttons button:hover {
  background-color: slateblue;
  color: #fff;
}
@media screen and (min-width: 769px) and (max-width: 1440px) {
  .movie-results {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    padding: 20px;
  }
  .movie-list-info {
    margin-left: 10px;
  }
  .movie-list img {
    max-width: 200px;
    max-height: 300px;
    min-height: 300px;
  }
  .movie-list-title {
    font-size: 18px;
    font-weight: 600;
    margin-top: 10%;
    margin-bottom: 10px;
    color: black;
    width: 200px;
    word-wrap: break-word;
  }
  .page-buttons {
    display: flex;
    padding: 30px;
  }
}

@media screen and (min-width: 425px) and (max-width: 768px) {
  .movie-list {
    display: inline-block;
    flex-wrap: wrap;
    justify-content: center;
    padding: 40px;
    max-width: 250px;
  }
  .movie-list-title {
    font-size: 16px;
    font-weight: 600;
    margin-top: 10%;
    margin-bottom: 10px;
    color: black;
    width: 250px;
    word-wrap: break-word;
  }
  .page-buttons {
    display: flex;
    padding: 30px;
  }
}

@media screen and (min-width: 320px) and (max-width: 480px) {
  .search-bar {
    padding: 20px;
  }
  .search-bar input {
    width: 75%;
  }
  .search-bar button {
    width: 50%;
  }

  .movie-results {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    padding: 10px;
  }
  .movie-list-title {
    font-size: 15px;
    font-weight: 600;
    margin-top: 20%;
    margin-bottom: 10px;
    color: black;
    width: 250px;
    word-wrap: break-word;
  }
  .page-buttons {
    width: 100%;
  }
  .page-buttons button {
    width: 30%;
  }
}

